vlib/v/checker/tests/go_wait_or.out
vlib/v/checker/tests/go_wait_or.vv:5:6: notice: unused parameter: `n`
    3 | }
    4 | 
    5 | fn e(n int) {}
      |      ^
    6 | 
    7 | fn f(n int) ?f64 {
vlib/v/checker/tests/go_wait_or.vv:11:6: notice: unused parameter: `n`
    9 | }
   10 | 
   11 | fn g(n int) ? {}
      |      ^
   12 | 
   13 | fn main() {
vlib/v/checker/tests/go_wait_or.vv:18:16: error: unexpected `?`, the function `wait` does not return an Option
   16 |         spawn d(1),
   17 |     ]
   18 |     r := tg.wait()?
      |                   ^
   19 |     println(r)
   20 |     s := tg[0].wait() or { panic('problem') }
vlib/v/checker/tests/go_wait_or.vv:20:20: error: unexpected `or` block, the function `wait` does not return an Option or a Result
   18 |     r := tg.wait()?
   19 |     println(r)
   20 |     s := tg[0].wait() or { panic('problem') }
      |                       ~~~~~~~~~~~~~~~~~~~~~~~
   21 |     println(s)
   22 |     tg2 := [
vlib/v/checker/tests/go_wait_or.vv:26:13: error: unexpected `or` block, the function `wait` does not return an Option or a Result
   24 |         spawn e(1),
   25 |     ]
   26 |     tg2.wait() or { panic('problem') }
      |                ~~~~~~~~~~~~~~~~~~~~~~~
   27 |     tg2[0].wait()?
   28 |     tg3 := [
vlib/v/checker/tests/go_wait_or.vv:27:15: error: unexpected `?`, the function `wait` does not return an Option
   25 |     ]
   26 |     tg2.wait() or { panic('problem') }
   27 |     tg2[0].wait()?
      |                  ^
   28 |     tg3 := [
   29 |         spawn f(0),
vlib/v/checker/tests/go_wait_or.vv:47:13: error: option handling cannot be done in `spawn` call. Do it when calling `.wait()`
   45 |     tg4.wait()
   46 |     tg4[0].wait()
   47 |     spawn g(3) or { panic('problem') }
      |                ~~~~~~~~~~~~~~~~~~~~~~~
   48 | }
